<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#FFFFFF">

    <ImageView
        android:id="@+id/imgPerfil"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/usuario"
        android:contentDescription="@string/perfil"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/tvNombreUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/tvEditarPerfil"
            android:text="@string/editar_perfil_opcion"
            style="@style/PerfilOptionStyle" />

        <TextView
            android:id="@+id/tvAjustes"
            android:text="@string/ajustes_opcion"
            style="@style/PerfilOptionStyle" />

        <TextView
            android:id="@+id/tvCerrarSesion"
            android:text="@string/cerrar_sesion"
            android:textColor="#FF3D57"
            style="@style/PerfilOptionStyle" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btnVolverPerfil"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/volver_menu"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#333333" />

</LinearLayout>